--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
 .App {
   text-align: center;
+  height: 100vh;
+  /* width: 100vw; */
+  /* width: 100%;
+  height: 100%; */
+  /* margin-left: 5px;
+  margin-right: 5px; */
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-areas:"video-container"
+                      "control-container"
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#video-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-height: 50vh;
+  height: 50vh; 
+  max-width: 50vw;
+  width: 50vw; 
+  grid-template-areas: 
+    "overlap-zone"
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#primary-video-container{
+  /* grid-area: primary-video;
+  justify-self: center; */
+  /* justify-self: start; */
+  /* max-width: 80%;
+  width: 80%;
+  max-height: 80%;
+  height: 80%; */
+  max-width: 50vw;
+  width: 50vw; 
+  background-color: pink;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#primary-video {
+  /* position: absolute;
+  margin-top: 200px;
+  margin-left: 50px; */
+  /* width: 100%;
+  height: 100%;
+  object-fit: cover; */
+  border: 3px solid #73AD21;
+  max-width: 100vw;
+  width: 100vw; 
+  max-height: 50vh;
+  height: 50vh; 
+  grid-area: overlap-zone;
+  justify-self: stretch;
+  background-color: aqua;
+
+  /* position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 50%;
+  height: 50%;
+  border: 3px solid #73AD21; */
 }
 
-.App-link {
-  color: #61dafb;
+#secondary-video-container{
+  /* grid-area: primary-video / secondary-video; */
+  /* justify-self: start;
+  grid-area: primary-video;
+  justify-self: start;
+  max-width: 50%;
+  width: 50%;
+  max-height: 50%;
+  height: 50%; */
+  background-color: aqua;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#secondary-video {
+  /* position: absolute;
+  margin-top: 210px;
+  margin-left: 60px; */
+  /* max-width: 50%;
+  width: 50%;*/
+  border-radius: 16px; 
+  border: 3px solid #73AD21;
+  max-width: 20vw;
+  width: 20vw; 
+  max-height: 20vh;
+  height: 20vh; 
+  grid-area: overlap-zone;
+  background-color: gray;
+  /* grid-area: primary-video / secondary-video; */
+}
+
+
+#control-container {
+  display: grid;
+  grid-template-rows: auto;
+  grid-area: control-container;
+  max-height: 50vh;
+  height: 50vh; 
+}
+
+#header{
+  color: red;
+}
+
+#text-input{
+  color: red;
+}
+
+#button{
+  color: red;
 }
